# TheKid

./: .gitignore  README.md  chat_terminal.py  lefthook.yml  main.py  pyproject.toml
brain/: synapses.rem-shm  synapses.rem-wal
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md
core/: engine.py  logger.py  math_utils.py  teacher.py  vocal_cords.py
docs/: architecture_phase_20.md  ns_cognitive_architecture.md
docs/diagrams/: 01_2026-02-28_core_architecture.md
missions/: auto_learn_Easier English Basic Dictionary.pdf.json  auto_learn_Longman_English_Grammar_Practice_intermediate_Self_Study_Edition (learnenglishteam.com).pdf.json  auto_learn_Oxford Collocations Dictionary for Students of English.pdf.json  auto_learn_conversational_speech.md.json  auto_learn_counting_and_numbers.md.json  auto_learn_descriptive_logic.md.json  auto_learn_dialog_mechanics.md.json  auto_learn_functional_dialogue.md.json  auto_learn_grammar-rules.pdf.json  auto_learn_language_grammar.md.json  auto_learn_logic_and_connections.md.json  auto_learn_logic_concepts.md.json  auto_learn_math_grade_1.md.json  auto_learn_math_grade_2.md.json  auto_learn_math_grade_3.md.json  auto_learn_math_grade_4.md.json  auto_learn_math_grade_5.md.json  auto_learn_personality.md.json  auto_learn_phonics_and_sounds.md.json  auto_learn_sentence_mechanics.md.json  auto_learn_sight_words_and_vocab.md.json  learn_grammar.json  learn_to_talk.json
scripts/: brain_normalization.py  db_audit.py
tools/: batch_k12_ingest.py  curriculum_downloader.py
(+10 files in other folders)
