[project]
name = "thekid"
version = "0.1.0"
description = "The Kid - Neuro-Symbolic Specialist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.65.0",
    "markdownify>=1.2.2",
    "ollama>=0.6.1",
    "pypdf>=6.7.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "sympy>=1.14.0",
    "wikipedia>=1.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
